WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303846
[blocks-in-inline] Fix editing/inserting/insert-list-with-body-child-crash.html
https://bugs.webkit.org/show_bug.cgi?id=303846
Summary
[blocks-in-inline] Fix editing/inserting/insert-list-with-body-child-crash.html
alan
Reported
2025-12-09 08:18:54 PST
see
https://github.com/WebKit/WebKit/pull/55086
Attachments
Patch
(2.31 KB, patch)
2025-12-09 08:23 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(2.51 KB, patch)
2025-12-09 11:46 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-09 08:23:38 PST
Created
attachment 477679
[details]
Patch
alan
Comment 2
2025-12-09 11:46:56 PST
Created
attachment 477680
[details]
[fast-cq]Patch
EWS
Comment 3
2025-12-09 14:19:02 PST
Committed
304178@main
(2cd5965613e1): <
https://commits.webkit.org/304178@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477680
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-12-09 14:20:12 PST
<
rdar://problem/166173739
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug