[blocks-in-inline] Fix editing/inserting/insert-list-with-body-child-crash.html https://bugs.webkit.org/show_bug.cgi?id=303846

Reviewed by Antti Koivisto.

This fast path is for block layout only (and not when the block is inside an inline).

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutBlock):
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeight const): parentBox expects the caller to ensure that the parent is a RenderBox.

Canonical link: https://commits.webkit.org/304178@main